@@ -150,8 +150,7 @@ class TextIndex(BaseIndexMixin, Persistent):
     applyNotEq = applyNotContains
     noteq = notcontains
 
-    def sort(self, result, reverse=False, limit=None, sort_type=None,
-             ignore_missing=False):
+    def sort(self, result, reverse=False, limit=None, **kw):
         """Sort by text relevance.
 
         This only works if the query includes at least one text query,
